<?php

/*
 * To change this license header, choose License Headers in Project Properties.
 * To change this template file, choose Tools | Templates
 * and open the template in the editor.
 */

namespace SBG\App\Model\Interfaces;

/**
 *
 * @author mzdybel
 */
interface MetricCompareInterface {
    public function compareData();

}
