@startuml

interface MetricInterface {
    presentMetricStatus()
    ' getCompareResult()

-- Zobowiązanie --
Zwracać powinna 
wyłącznie status metryki:
" 1" - poprawia się
" 0" - bez zmian, 
"-1" - spada, 
}

class Metric {
    metricStatus
--
    presentMetricStatus()
-- Zobowiązanie --
Zwraca status metryki
}

Metric -up-|> MetricInterface


interface MetricCompareInterface {
compareData()
}

class MetricCompare {
currentData
previousData
--
compareData()
displayResult()

}

MetricCompare -up-|> MetricCompareInterface

MetricCompare -left-> Metric

/'
interface MetricScallarReprezentInterface {
convertDataSet()
}

class MetricScallarReprezent {
dataSet
--
convertDataSet()
-- Zobowiązanie --
Zwraca skonwertowaną, 
przeliczoną, przetworzoną 
wartość liczbową
umożlwiającą wykonanie porównania
}

MetricScallarReprezent -up-|> MetricScallarReprezentInterface

MetricCompare -right-> MetricScallarReprezent
'/
@enduml
